# ping-ingest

./: .gitattributes  .gitignore  1-bulk-decompress.ipynb  3-parquet-vis-polars.ipynb  4-optimize-dataset.ipynb  4-optimize-dataset.py  5-ping-visualization.ipynb  6-autocorr-vis.md  7-learning-rewrite.md  7-learning.md  README.md  nix-setup.sh  optimize_dataset.py  parse-pyarrow-parquet-3.ipynb  ping-json-parse-1 copy.ipynb  ping-json-parse-1.ipynb  ping-json-pyarrow.ipynb  ping-parquet-parse-2.ipynb  probe_ip_map.csv  requirements.txt  verify_data.py  verify_data_careful.py
1-processing/: 0-bulk-download.ipynb  1-bulk-decompress.ipynb  2-parquet-concat.py  2-parse-raw-ping.ipynb  3-parquet-vis.ipynb  4-optimize-dataset.slurm  5-ping-visualization.ipynb  5-ping-visualization.py  atlas-get-ip-probe-map.ipynb  ipv4_filter_summary.md
2-model/: PLAN.md  README.md  explore.ipynb  main.py  model.py  pyproject.toml
2-training/: 7-learning-rewrite.md  PLAN.md
2-training-old/: PLAN.md
