[project]
name = "2-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.35.1",
    "wandb>=0.22.2",
    "jax>=0.4.34",
    "jaxlib>=0.4.34",
    "equinox>=0.11.9",
    "haliax>=1.4.0",
    "jaxtyping>=0.2.34",
    "grain-nightly>=0.2.1",
    "pyarrow>=18.1.0",
    "numpy>=2.0.0",
    "optax>=0.2.4",
    "tqdm>=4.67.1",
]
